--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
                         </ul>
                     </div>
             </nav>
+
+            <div class="library">
+                <nav class="library__menu">
+                        <div class="you__library">
+                            <a href="#">
+                                <span class="fa fa-book"></span>
+                                <span id="texto">Sua Biblioteca</span>
+                            </a>
+                        </div>
+
+                        <div class="playlist">
+                            <h1>Crie sua primeira playlist</h1>
+                            <p>É fácil, vamos te ajudar.</p>
+
+                            <button>Criar playlist</button>
+                        </div>
+                    
+                </nav>
+            </div>
+
+
+
         </div>
+
+        
+
     </body>
 </html>
